# pgsq

./: README.md  pyproject.toml
pgsq/: __init__.py  apps.py  backend.py  models.py  sample_tasks.py  test_tasks.py  worker.py
pgsq/management/commands/: __init__.py  pgsq_worker.py
pgsq/migrations/: 0001_initial.py  0002_rename_tenant_id.py
