[project]
name = "pgsq"
version = "0.2.0"
description = "PostgreSQL-backed multi-tenant task queue for Django's Tasks API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kamal Mustafa" },
    { name = "Kafkai Giken" },
]
requires-python = ">=3.12"
dependencies = [
    "django-tasks>=0.12.0",
    "psycopg2-binary>=2.9.2",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.entry-points."django.apps"]
pgsq = "pgsq.apps.PgsqConfig"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgsq*"]

[tool.setuptools.package-data]
pgsq = ["py.typed"]
